--- a/docs/source/_static/styles.css
+++ b/docs/source/_static/styles.css
@@ -7,8 +7,11 @@ h4 { font-size: 24px !important; }
 h5 { font-size: 18px !important; }
 h6 { font-size: 14px !important; }
 
-footer a{
+footer {
+    color: gray !important;
+}
 
+footer a{
     color: #4c72b0 !important;
 }
 
