--- a/docs/source/_static/styles.css
+++ b/docs/source/_static/styles.css
@@ -39,7 +39,7 @@ footer a{
     border-radius: 4px !important;
 }
 
-.admonition-ingredients {
+.ingredients {
     color: #444444 !important;
     font-weight: bold;
     background-color: white !important;
@@ -51,15 +51,27 @@ footer a{
     padding-left: 12px !important;
 }
 
-.admonition-ingredients > ul {
+.ingredients > ul {
     font-style: italic !important;
     font-weight: normal;
 }
 
-.admonition-ingredients > .admonition-title {
+.ingredients > .admonition-title {
     font-size: 18px !important;
+    color: inherit !important;
+    background-color: inherit !important;
 }
 
 .admonition-title::before {
     content: none !important;
+}
+
+.procedure {
+    color: #444444 !important;
+    background-color: white !important;
+    border-width: 0px !important;
+}
+
+.procedure a {
+    font-weight: inherit !important;
 }
