Added a `makes` directive

--- a/docs/source/_static/styles.css
+++ b/docs/source/_static/styles.css
@@ -75,3 +75,12 @@ footer a{
 .procedure a {
     font-weight: inherit !important;
 }
+
+.makes {
+    color: #444444 !important;
+    background-color: white !important;
+}
+
+.makes > .admonition-title {
+    font-weight: normal !important;
+}
